// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Sheet /> should open 1`] = `
<Sheet
  allowClose={true}
  animation={{}}
  backdrop={true}
  className={null}
  contentClassName={null}
  duration={300}
  isLoading={false}
  isOpen={true}
  onClose={[Function]}
  onDidClose={[Function]}
  onDidOpen={[Function]}
  onOpen={[Function]}
  showSearch={false}
  title="Test-Title"
>
  <SheetView
    allowClose={true}
    animationFromParent={{}}
    backdrop={true}
    className={null}
    contentClassName={null}
    contentRef={
      {
        "current": <div
          class="sg-12f1i2r-content"
        >
          <div>
            Test
          </div>
        </div>,
      }
    }
    duration={300}
    handleSearchInput={[Function]}
    isLoading={false}
    isOpen={true}
    onClose={[Function]}
    onDidClose={[Function]}
    onDidOpen={[Function]}
    onOpen={[Function]}
    onScroll={[Function]}
    scrolled={false}
    showSearch={false}
    title="Test-Title"
  >
    <section
      className="ui-shared__sheet sg-18ghh1t-section"
    >
      <Drawer
        animation={
          {
            "duration": 300,
            "in": "sg-1qtpl1n-drawerAnimIn",
            "out": "sg-1uynekm-drawerAnimOut",
          }
        }
        className="sg-omro4t-container"
        isOpen={true}
        onClose={[Function]}
        onDidClose={[Function]}
        onDidOpen={[Function]}
        onOpen={[Function]}
      >
        <div
          aria-modal={true}
          className="common__drawer sg-14bsy0q-container-drawerAnimIn-container"
          onAnimationEnd={[Function]}
          role="dialog"
          style={
            {
              "animationDuration": "300ms",
            }
          }
          tabIndex={-1}
        >
          <Header
            allowClose={true}
            handleChange={[Function]}
            onToggleClose={[Function]}
            shadow={false}
            showSearch={false}
            title="Test-Title"
          >
            <div
              className=""
            >
              <Grid
                className="sg-uz2gz-wrapper"
                component="div"
                wrap={false}
              >
                <div
                  className="common__grid sg-1dxmo4l-root-noWrap-wrapper"
                >
                  <button
                    aria-label="common.close"
                    className="sg-cb4y3g-closeButton"
                    onClick={[Function]}
                    type="button"
                  >
                    <Ripple
                      className="sg-8ivrra-closeIcon"
                      color="#000"
                      disabled={false}
                      fill={false}
                      onClick={[Function]}
                      onComplete={[Function]}
                      overflow={false}
                      size={null}
                    >
                      <div
                        className="ui-shared__ripple sg-8ivrra-closeIcon"
                        data-test-id="Ripple"
                        onClick={[Function]}
                        style={
                          {
                            "overflow": "hidden",
                            "position": "relative",
                          }
                        }
                      >
                        <Cross
                          size={24}
                        >
                          <Icon
                            content="<path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>"
                            size={24}
                          >
                            <svg
                              className="sg-1n8b10t-root common__icon"
                              dangerouslySetInnerHTML={
                                {
                                  "__html": "<path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>",
                                }
                              }
                              style={
                                {
                                  "fill": undefined,
                                  "fontSize": 24,
                                }
                              }
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            />
                          </Icon>
                        </Cross>
                      </div>
                    </Ripple>
                  </button>
                  <GridItem
                    className="sg-1gh7dpa-title"
                    component="div"
                    grow={1}
                    role="heading"
                    shrink={1}
                    tabIndex={0}
                  >
                    <div
                      className="sg-1yim49x-root-title"
                      role="heading"
                      tabIndex={0}
                    >
                      Test-Title
                    </div>
                  </GridItem>
                </div>
              </Grid>
            </div>
          </Header>
          <div
            className="sg-1h0yrl3-progressBarContainer"
          >
            <ProgressBar
              isVisible={false}
            >
              <Transition
                appear={false}
                enter={true}
                exit={true}
                in={false}
                mountOnEnter={false}
                onEnter={[Function]}
                onEntered={[Function]}
                onEntering={[Function]}
                onExit={[Function]}
                onExited={[Function]}
                onExiting={[Function]}
                timeout={150}
                unmountOnExit={false}
              >
                <div
                  className="ui-shared__progress-bar"
                  style={
                    {
                      "background": {
                        "color": [
                          92,
                          206,
                          227,
                        ],
                        "model": "rgb",
                        "valpha": 0.4,
                      },
                      "bottom": 0,
                      "height": 4,
                      "overflow": "hidden",
                      "position": "absolute",
                      "transform": "scale(1, 0)",
                      "transition": "transform 150ms cubic-bezier(0.25, 0.1, 0.25, 1)",
                      "width": "100%",
                      "zIndex": 10,
                    }
                  }
                >
                  <div
                    className="sg-hmfbp5-innerElement"
                  />
                </div>
              </Transition>
            </ProgressBar>
          </div>
          <div
            className="sg-12f1i2r-content"
            onScroll={[Function]}
          >
            <div
              key=".0"
            >
              Test
            </div>
          </div>
        </div>
      </Drawer>
      <Backdrop
        className=""
        color="#000"
        duration={200}
        isVisible={true}
        level={4}
        lockBodyScroll={true}
        onClick={[Function]}
        opacity={20}
      >
        <Transition
          appear={true}
          enter={true}
          exit={true}
          in={true}
          mountOnEnter={true}
          nodeRef={
            {
              "current": <div
                aria-hidden="true"
                class="sg-1tlnanp-backdrop  common__backdrop"
                data-test-id="Backdrop"
                style="background: rgb(0, 0, 0); z-index: 4; transition: opacity 200ms ease-out; opacity: 0.2; pointer-events: auto;"
              />,
            }
          }
          onEnter={[Function]}
          onEntered={[Function]}
          onEntering={[Function]}
          onExit={[Function]}
          onExited={[Function]}
          onExiting={[Function]}
          timeout={200}
          unmountOnExit={true}
        >
          <div
            aria-hidden={true}
            className="sg-1tlnanp-backdrop  common__backdrop"
            data-test-id="Backdrop"
            onClick={[Function]}
            style={
              {
                "background": "#000",
                "opacity": 0.2,
                "pointerEvents": "auto",
                "transition": "opacity 200ms ease-out",
                "zIndex": 4,
              }
            }
          />
        </Transition>
      </Backdrop>
    </section>
  </SheetView>
</Sheet>
`;

exports[`<Sheet /> should render closed without content 1`] = `
<SheetView
  allowClose={true}
  animationFromParent={{}}
  backdrop={true}
  className={null}
  contentClassName={null}
  contentRef={
    {
      "current": null,
    }
  }
  duration={300}
  handleSearchInput={[Function]}
  isLoading={false}
  isOpen={false}
  onClose={[Function]}
  onDidClose={[Function]}
  onDidOpen={[Function]}
  onOpen={[Function]}
  onScroll={[Function]}
  scrolled={false}
  showSearch={false}
  title=""
/>
`;

exports[`<Sheet /> should render opened without content 1`] = `
<SheetView
  allowClose={true}
  animationFromParent={{}}
  backdrop={true}
  className={null}
  contentClassName={null}
  contentRef={
    {
      "current": null,
    }
  }
  duration={300}
  handleSearchInput={[Function]}
  isLoading={false}
  isOpen={true}
  onClose={[Function]}
  onDidClose={[Function]}
  onDidOpen={[Function]}
  onOpen={[Function]}
  onScroll={[Function]}
  scrolled={false}
  showSearch={false}
  title=""
/>
`;

exports[`<Sheet /> should render with content and title 1`] = `
<SheetView
  allowClose={true}
  animationFromParent={{}}
  backdrop={true}
  className={null}
  contentClassName={null}
  contentRef={
    {
      "current": null,
    }
  }
  duration={300}
  handleSearchInput={[Function]}
  isLoading={false}
  isOpen={true}
  onClose={[Function]}
  onDidClose={[Function]}
  onDidOpen={[Function]}
  onOpen={[Function]}
  onScroll={[Function]}
  scrolled={false}
  showSearch={false}
  title="Test-Title"
>
  <div
    key=".0"
  >
    Test
  </div>
</SheetView>
`;

exports[`<Sheet /> should trigger onClose callback and close the Sheet 1`] = `
<Sheet
  allowClose={true}
  animation={{}}
  backdrop={true}
  className={null}
  contentClassName={null}
  duration={300}
  isLoading={false}
  isOpen={true}
  onClose={
    [MockFunction] {
      "calls": [
        [],
        [],
      ],
      "results": [
        {
          "type": "return",
          "value": undefined,
        },
        {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  onDidClose={[Function]}
  onDidOpen={[Function]}
  onOpen={[Function]}
  showSearch={false}
  title="Test-Title"
>
  <SheetView
    allowClose={true}
    animationFromParent={{}}
    backdrop={true}
    className={null}
    contentClassName={null}
    contentRef={
      {
        "current": <div
          class="sg-12f1i2r-content"
        >
          <div>
            Test
          </div>
        </div>,
      }
    }
    duration={300}
    handleSearchInput={[Function]}
    isLoading={false}
    isOpen={false}
    onClose={[Function]}
    onDidClose={[Function]}
    onDidOpen={[Function]}
    onOpen={[Function]}
    onScroll={[Function]}
    scrolled={false}
    showSearch={false}
    title="Test-Title"
  >
    <section
      className="ui-shared__sheet"
    >
      <Drawer
        animation={
          {
            "duration": 300,
            "in": "sg-1qtpl1n-drawerAnimIn",
            "out": "sg-1uynekm-drawerAnimOut",
          }
        }
        className="sg-omro4t-container"
        isOpen={false}
        onClose={[Function]}
        onDidClose={[Function]}
        onDidOpen={[Function]}
        onOpen={[Function]}
      >
        <div
          aria-modal={true}
          className="common__drawer sg-1wgf7aq-container-drawerAnimOut-container"
          onAnimationEnd={[Function]}
          role="dialog"
          style={
            {
              "animationDuration": "300ms",
            }
          }
          tabIndex={-1}
        >
          <Header
            allowClose={true}
            handleChange={[Function]}
            onToggleClose={[Function]}
            shadow={false}
            showSearch={false}
            title="Test-Title"
          >
            <div
              className=""
            >
              <Grid
                className="sg-uz2gz-wrapper"
                component="div"
                wrap={false}
              >
                <div
                  className="common__grid sg-1dxmo4l-root-noWrap-wrapper"
                >
                  <button
                    aria-label="common.close"
                    className="sg-cb4y3g-closeButton"
                    onClick={[Function]}
                    type="button"
                  >
                    <Ripple
                      className="sg-8ivrra-closeIcon"
                      color="#000"
                      disabled={false}
                      fill={false}
                      onClick={[Function]}
                      onComplete={[Function]}
                      overflow={false}
                      size={null}
                    >
                      <div
                        className="ui-shared__ripple sg-8ivrra-closeIcon"
                        data-test-id="Ripple"
                        onClick={[Function]}
                        style={
                          {
                            "overflow": "hidden",
                            "position": "relative",
                          }
                        }
                      >
                        <Cross
                          size={24}
                        >
                          <Icon
                            content="<path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>"
                            size={24}
                          >
                            <svg
                              className="sg-1n8b10t-root common__icon"
                              dangerouslySetInnerHTML={
                                {
                                  "__html": "<path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>",
                                }
                              }
                              style={
                                {
                                  "fill": undefined,
                                  "fontSize": 24,
                                }
                              }
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            />
                          </Icon>
                        </Cross>
                      </div>
                    </Ripple>
                  </button>
                  <GridItem
                    className="sg-1gh7dpa-title"
                    component="div"
                    grow={1}
                    role="heading"
                    shrink={1}
                    tabIndex={0}
                  >
                    <div
                      className="sg-1yim49x-root-title"
                      role="heading"
                      tabIndex={0}
                    >
                      Test-Title
                    </div>
                  </GridItem>
                </div>
              </Grid>
            </div>
          </Header>
          <div
            className="sg-1h0yrl3-progressBarContainer"
          >
            <ProgressBar
              isVisible={false}
            >
              <Transition
                appear={false}
                enter={true}
                exit={true}
                in={false}
                mountOnEnter={false}
                onEnter={[Function]}
                onEntered={[Function]}
                onEntering={[Function]}
                onExit={[Function]}
                onExited={[Function]}
                onExiting={[Function]}
                timeout={150}
                unmountOnExit={false}
              >
                <div
                  className="ui-shared__progress-bar"
                  style={
                    {
                      "background": {
                        "color": [
                          92,
                          206,
                          227,
                        ],
                        "model": "rgb",
                        "valpha": 0.4,
                      },
                      "bottom": 0,
                      "height": 4,
                      "overflow": "hidden",
                      "position": "absolute",
                      "transform": "scale(1, 0)",
                      "transition": "transform 150ms cubic-bezier(0.25, 0.1, 0.25, 1)",
                      "width": "100%",
                      "zIndex": 10,
                    }
                  }
                >
                  <div
                    className="sg-hmfbp5-innerElement"
                  />
                </div>
              </Transition>
            </ProgressBar>
          </div>
          <div
            className="sg-12f1i2r-content"
            onScroll={[Function]}
          >
            <div
              key=".0"
            >
              Test
            </div>
          </div>
        </div>
      </Drawer>
      <Backdrop
        className=""
        color="#000"
        duration={200}
        isVisible={false}
        level={4}
        lockBodyScroll={true}
        onClick={[Function]}
        opacity={20}
      >
        <Transition
          appear={true}
          enter={true}
          exit={true}
          in={false}
          mountOnEnter={true}
          nodeRef={
            {
              "current": null,
            }
          }
          onEnter={[Function]}
          onEntered={[Function]}
          onEntering={[Function]}
          onExit={[Function]}
          onExited={[Function]}
          onExiting={[Function]}
          timeout={200}
          unmountOnExit={true}
        >
          <div
            aria-hidden={true}
            className="sg-1tlnanp-backdrop  common__backdrop"
            data-test-id="Backdrop"
            onClick={[Function]}
            style={
              {
                "background": "#000",
                "opacity": 0,
                "pointerEvents": "none",
                "transition": "opacity 200ms ease-out",
                "zIndex": 4,
              }
            }
          />
        </Transition>
      </Backdrop>
    </section>
  </SheetView>
</Sheet>
`;
